[package]
name = "rust-jni"
version = "0.1.0"
authors = ["Monnoroch <monnoroch@gmail.com>"]
license = "MIT"
description = "A package for easy Java interop"
repository = "https://github.com/Monnoroch/rust-jni"
documentation = "https://docs.rs/rust-jni/"
keywords = ["java"]
readme = "README.md"
include = [
	"Cargo.toml",
	"build.rs",
	"src/**/*.rs",
	"tests/**/*.rs",
	"README.md",
	"LICENSE",
]

[badges]
travis-ci = { repository = "Monnoroch/rust-jni", branch = "master" }

[dependencies]
cesu8 = "1.1.0"
jni-sys = "0.3.0"

[dev-dependencies]
lazy_static = "1"

[build-dependencies]
walkdir = "2"

[features]
libjvm = []
