[package]
name = "rust-jni-generator"
version = "0.1.0"
authors = ["Monnoroch <monnoroch@gmail.com>"]
license = "MIT"
description = "A package for generating Java class wrappers that use rust-jni crate"
repository = "https://github.com/Monnoroch/rust-jni"
documentation = "https://docs.rs/rust-jni-generator/"
keywords = ["java"]
include = [
	"Cargo.toml",
	"src/**/*.rs",
	"tests/**/*.rs",
]

[dependencies]
quote = "0.6.4"
proc-macro2 = "0.4.9"
rust-jni = "0.1.0"

[dev-dependencies]
jni-sys = "0.3.0"

[lib]
proc-macro = true
