[package]
name = "java"
version = "0.1.0"
authors = ["Monnoroch <monnoroch@gmail.com>"]
license = "MIT"
description = "A package with Java class wrappers generated using rust-jni-generator crate."
repository = "https://github.com/Monnoroch/rust-jni"
documentation = "https://docs.rs/java/"
keywords = ["java"]
include = [
	"Cargo.toml",
	"src/**/*.rs",
	"tests/**/*.rs",
]
edition = "2018"

[dependencies]
rust-jni = { path = "../rust-jni" }
