[package]
name = "rust-jni"
version = "0.1.0"
authors = ["Monnoroch <monnoroch@gmail.com>"]
license = "MIT"
description = "A package for easy Java interop"
repository = "https://github.com/Monnoroch/rust-jni"
documentation = "https://docs.rs/rust-jni/"
keywords = ["java"]
readme = "README.md"
include = [
    "Cargo.toml",
    "build.rs",
    "src/**/*.rs",
    "tests/**/*.rs",
    "README.md",
    "LICENSE",
]
edition = "2018"
build = "build.rs"

[badges]
travis-ci = { repository = "Monnoroch/rust-jni", branch = "master" }

[dependencies]
cesu8 = "1.1.0"
jni-sys = "0.3.0"
cfg-if = "1.0.0"

[dev-dependencies]
mockall = { git = "https://github.com/asomers/mockall.git", rev = "459ed5c541063676be03e942af81d7b2c5435762" }
serial_test = { git = "https://github.com/palfrey/serial_test.git", rev = "39a7a6c56b6add60bbffdb27b14faba74e3f6b10" }

[build-dependencies]
walkdir = "2.2.9"

[features]
default = ["libjvm"]
libjvm = []
mock-jvm = []
